# geo-photo-toolkit

./: .gitignore  README.md  global_config.toml  main.py  pyproject.toml
src/: config.py
src/core/: exif.py  image_analysis.py  kml.py  ocr.py  preprocess.py
src/io/: downloader.py  writer.py
src/utils/: config_loader.py  logging.py
src/workflows/: gps_extraction.py  kmz_generation.py
