[project]
name = "geo_photo_toolkit"
version = "1.4.0" # Bumping version for this intelligent feature
description = "A toolkit for extracting GPS data from photos and generating KMZ files."
dependencies = [
    "pandas",
    "Pillow",
    "fuzzywuzzy",
    "tlsh",
    "openpyxl",
    "requests",
    "simplekml",
    "pydantic",
    "pydantic-settings",
    "typer[all]",
    "tomli",
    "opencv-python-headless",
    "regex",
    "easyocr",
    "google-cloud-vision",
    "scipy", # Add scipy for statistical analysis (finding the mode)
]

[tool.ruff]
line-length = 88
# Enable the isort rules.
extend-select = ["I"]